
* упорядочен механизм работы с ГСЧ;
* классификатор дает на MNIST ошибку порядка 3.7%;

* -Wall
* -Wextra

* ReLU - переделан тест;
* добавлен пример генерации картинок для TestModel -- fuzzy2jpeg;
TODO: подумать о переделке DataHolder/Tensor/tensormath  в Абстрактную Фабрику или типа того, дабы сделать CUDA;

* Tensor объединен с tensormath и вынесен из DataHolder;
* в корневой main.cpp добавлено измерение времени;

* добавлен Timer.hpp для измерения времени работы;
* расширено тестирование DataHolder;

* добавлено измерение таймингов прямого и обратного распространения ошибки и обучения в класс тестирования;
* обновлены комментарии для Doxygen;

* оптимизация Tensor::val();
* добавлен код для цветного вывода текста в консоль -- Console.hpp
* статистика по тестированию теперь цветная;
* добавлен тест на оператор поворота в трехмерном пространстве TestRot3;
* тест для Layer модифицирован для оператора поворота;

* добавлен слой Dropout;
* добавлен поддержка Dropout в ModelTest;
* добавлено распределение Бернулли в Tensor;
* добавлено поэлементное перемножение тензоров Tensor::prod();
* добавлена рассылка событий по сети, для управления отдельными слоями и компонентами;

* добавлен метод Tensor::prodapp();
* обновлен код Gain переходом на Tensor::prod() и prodapp();

* добавлен метод Tensor::fill(val);
* добавлен юнит-тест для Dropout;
* из Timer вынесен код онлайн-оценки статистических параметров случайной величины в OnlineStatistics;
* добавлен дропаут в examples/fuzzy2jpeg;

* настройки exaples/MNIST.classifier и правки MNIST:
    - работа над ошибками;
    - перемешивание выборки;
    - инкапсуляция семплов;

* добавлен метод оптимизции Нестерова;
* добавлен отдельный тест для методов оптимизации;
* добавлен метод AbstractTutor::clone() для замены учителя налету;

* Изменен DataHolder::clone() для реализации паттерна Прототип; 
* Соответсвующие изменеия в Learnable;

* Добавлен интерфейс IDataHolder;

* Исправления в Makefile;

* Добавлен интерфейс ITensor;
