@@ -10,9 +10,9 @@
 
 #include <ANN.hpp>
 #include <Successor.hpp>
-#include <DataHolder.hpp>
+#include <IDataHolder.hpp>
 #include <AbstractTutor.hpp>
-#include <Tensor.hpp>
+#include <ITensor.hpp>
 
 /** 
     @brief Arctan - активаторная функция - арктангенс.f(x)=a*arctan(x/a)
