@@ -8,9 +8,9 @@
 
 #include <ANN.hpp>
 #include <Successor.hpp>
-#include <DataHolder.hpp>
+#include <IDataHolder.hpp>
 #include <AbstractTutor.hpp>
-#include <Tensor.hpp>
+#include <ITensor.hpp>
 
 /** 
     @brief Wire - Простой класс соединительных "проводов". Основное назначение - участие в конструкторе композиции
